--- a/make_shared_array.html
+++ b/make_shared_array.html
@@ -250,8 +250,10 @@ boost::shared_ptr&lt;int[4][2]&gt; a2 = boost::make_shared_noinit&lt;int[4][2]&g
       </blockquote>
     </blockquote>
     <h2><a name="history">History</a></h2>
-    <p>January 2014. Glen Fernandes reduced the overloads of make_shared and 
-      allocate_shared according to <a href="#N3870">N3870</a>.</p>
+    <p>February 2014. Glen Fernandes updated overloads of make_shared and 
+      allocate_shared to conform to the specification in C++ standard paper 
+      <a href="#N3870">N3870</a> including resolving C++ standard library 
+      defect report 2070.</p>
     <p>November 2012. Glen Fernandes contributed implementations of 
       make_shared and allocate_shared for arrays.</p>
     <h2><a name="references">References</a></h2>
@@ -260,7 +262,7 @@ boost::shared_ptr&lt;int[4][2]&gt; a2 = boost::make_shared_noinit&lt;int[4][2]&g
       Extending make_shared to Support Arrays, Revision 1</a>, Peter Dimov 
       &amp; Glen Fernandes, January, 2014.</p>
     <hr>
-    <p>$Date: 2014-01-20 11:10:00 -0800 (Mon, 20 Jan 2014) $</p>
+    <p>$Date$</p>
     <p><small>Copyright 2012-2014 Glen Fernandes. Distributed under the 
       Boost Software License, Version 1.0. See accompanying file 
       <a href="../../LICENSE_1_0.txt">LICENSE_1_0.txt</a> or copy at 
