--- a/make_unique.html
+++ b/make_unique.html
@@ -142,7 +142,7 @@ unique_ptr&lt;int[][2]&gt; p2 = boost::make_unique_noinit&lt;int[][2]&gt;(2);</p
     <p>January 2014. Glen Fernandes contributed implementations of 
       make_unique for objects and arrays.</p>
     <hr>
-    <p>$Date: 2014-01-20 11:10:00 -0800 (Mon, 20 Jan 2014) $</p>
+    <p>$Date$</p>
     <p><small>Copyright 2012-2014 Glen Fernandes. Distributed under the 
       Boost Software License, Version 1.0. See accompanying file 
       <a href="../../LICENSE_1_0.txt">LICENSE_1_0.txt</a> or copy at 
