--- a/shared_array.htm
+++ b/shared_array.htm
@@ -174,7 +174,7 @@ template&lt;class T&gt;
         <p>Equivalent to <b>a.swap(b)</b>. Matches the interface of <b>std::swap</b>. 
             Provided as an aid to generic programming.</p>
         <hr>
-        <p>$Date</p>
+        <p>$Date$</p>
         <p><small>Copyright 1999 Greg Colvin and Beman Dawes. Copyright 2002 Darin Adler. 
             Copyright 2002-2005 Peter Dimov. Distributed under the Boost Software License, Version 
             1.0. See accompanying file <A href="../../LICENSE_1_0.txt">LICENSE_1_0.txt</A> or 
